		Fixed possible memory leak when changing textures.
		Examples: Removed ARCH_OPTIMAL_PARTICLE_SYSTEM since PointParticle is no longer supported
. [FIX] SpriteFrameCache: plist is not loaded again if it was already loaded (performance)
. [FIX] Texture2d: JPEG are loaded correctly on iOS4 (re-re-fixed issue #886)
		Improved iOS5 allocation bug warning and internal conversions.
. [3RD] Chipmunk Physics: Updated to v6.1

version 2.0-rc1 19-Apr-2012
. [NEW] v1.1 Forward-ported changes:
		CCArray: new sorting methods, replaceObjectAtIndex, isEqualToArray
		CCArray: equalilty is tested by isEqual instead of comparing pointer addresses
		CCArray: CCARRAY_FOREACH macro is now ARC compatible
		DrawPrimitives: Added new functions: ccDrawRect, ccDrawSolidRect
		Macros: CCLOG logs the class/method name
		Particles: The scheduler is removed on dealloc
		TMX: fixed bug on release when parsing errors.
. [NEW] Actions: Added Catmull Rom By/To and Cardinal Spline By/To actions
. [NEW] ActionManager: Added support for pause/resume all actions of target
. [NEW] Configuration: logs in which thread the director is running (Mac only)
. [NEW] DrawingPrimitives: added ccDrawCatmullRom, ccDrawCardinalSpline
. [NEW] FileUtils: It is a singleton (easier to subclass)
		NSFileManager and NSBundle are properties (can be changed in runtime)
		Added "fallback suffix" support for "get full path" and "remove suffix" (disabled by default).
		On iPad the default suffix is "-ipad". Before it was ""
. [NEW] LabelAtlas: added .plist config file support. Easier to migrate games to higher resolutions.
. [NEW] LabelTTF: Added support for vertical alignment
. [NEW] Tiled: TMX tile rotation is supported (issue #1350)
. [FIX] All: Fixed compiler warnings. Format strings changed from %08X to %p
. [FIX] Deprecated: displayedFrame points to displayFrame avoiding infinite loop (issue #1347)
. [FIX] Director: Fixed projection. ViewPort is the size of the screen. Projection adjusted (issue #1355)